# cats_vs_dogs

./: .gitignore  Dockerfile  README.md  pyproject.toml
animal_classificator/: app.py
animal_classificator/static/: style.css
animal_classificator/templates/: index.html
notebooks/: Cats_vs_Dogs_(image_classification).ipynb  cats vs dogs.ipynb
