[tool.poetry]
name = "animal_classificator"
version = "0.1.0"
description = ""
authors = ["Victoria Lebedeva"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.scripts]
app="animal_classificator.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
